--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 h1 {
     
-    margin-left:150px;
+    margin-left:40%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color:rgb(95, 92, 92);
+    
 }
 
 input {
-margin-left: 150px;
+margin-left: 35%;
 margin-top:10px;
 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 font-size: larger;
@@ -24,37 +25,38 @@ button {
     border-radius: 30px;
     padding: 9px;
     background-color: blue;
-    margin-left: 15px;
+    margin-left: 1%;
+    margin-top: 1%
 }
 
 .contenedor{
 
     background-color: white;
-    height:130px;
-    width: 600px;
     justify-self: center;
-      
+    width: 100%;
+         
 }
 
 
 .datosClima{
     
     height:250px;
-    width: 600px;
+    width: 50%;
     justify-self: center;
     margin-top:5px;
-    background-color: rgb(209, 207, 207);
     border-radius: 20px;
 }
 
 #map {
+
+    width: 50%; 
+    height: 600px; 
     justify-self: center;
-    height: 600px;
-    width: 600px;
-    margin-top: 1px;
+    margin-top: 5px;
     border-color: black;
     border-image: round;
     border-radius: 20px;
+    
 }
 
 img {
@@ -73,4 +75,9 @@ h2{
 
 justify-self: center;
 
+}
+
+.map{
+
+    width: 50%;
 }
