--- a/style.css
+++ b/style.css
@@ -1,90 +1,102 @@
-h1 {
-    
-    margin-left:40%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color:rgb(95, 92, 92);
-    
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100vh;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
-input {
-margin-left: 35%;
-margin-top:10px;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-font-size: larger;
-color:black;
-border-radius: 30px;
-padding: 10px;
+/* Centrar el título */
+h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgb(95, 92, 92);
+    text-align: center;
+    margin: 10px 0;
+}
 
+/* Input y botones centrados */
+input {
+    width: 80%;
+    max-width: 400px;
+    font-size: larger;
+    border-radius: 30px;
+    padding: 10px;
+    border: 1px solid gray;
+    text-align: center;
+    display: block;
+    margin: 10px auto;
 }
 
 button {
-    
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: larger;
     color: white;
     border-radius: 30px;
-    padding: 9px;
+    padding: 10px;
     background-color: blue;
-    margin-left: 1%;
-    margin-top: 1%
+    border: none;
+    cursor: pointer;
+    display: block;
+    margin: 10px auto;
 }
 
-.contenedor{
-
+/* Contenedor principal */
+.contenedor {
+    width: 90%;
+    max-width: 800px;
     background-color: white;
-    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+}
+
+/* Datos del clima */
+.datosClima {
     width: 100%;
-         
-}
-
-
-.datosClima{
-    
-    height:250px;
-    width: 50%;
-    justify-self: center;
-    margin-top:5px;
+    max-width: 500px;
     border-radius: 20px;
+    padding: 10px;
 }
 
+/* Estilos para el mapa */
 #map {
-
-    width: 50%; 
-    height: 600px; 
-    justify-self: center;
-    margin-top: 5px;
-    border-color: black;
-    border-image: round;
+    width: 100%;
+    max-width: 500px;
+    height: 300px;
+    border: 1px solid black;
     border-radius: 20px;
+    margin: 10px auto;
+    padding: 10px;
+}
+
+/* Imágenes centradas */
+img {
+    width: 100px;
+    height: auto;
+    display: block;
+    margin: 10px auto;
+    background-color: rgba(100, 210, 243, 0.596);
+    border-radius: 20%;
+    border-color: blue;
     
 }
-
-img {
-position:static;
-margin-top:-50px;
-margin-left:200px;
+/* Centrar párrafos y subtítulos */
+p, h2 {
+    margin: 10px auto;
+    text-align: center;
 }
 
-p {
-
-justify-self: center;
-
-}
-
-h2{
-
-justify-self: center;
-
-}
-
-.map{
-
-    width: 50%;
-}
-
+/* Estilos para móviles */
 @media (max-width: 600px) {
     #map {
-        width: 90%; /* Reduce el tamaño en celulares */
+        width: 90%;
         height: 250px;
+    }
+    input, button {
+        width: 90%;
     }
 }
