--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
+    background-color: rgb(120, 154, 247);
 }
 
 /* Centrar el título */
@@ -52,6 +53,8 @@ button {
     align-items: center;
     text-align: center;
     padding: 20px;
+    background-color: rgb(145, 227, 252);
+
 }
 
 /* Datos del clima */
